--- a/paginas/preguntasfrecuentes.html
+++ b/paginas/preguntasfrecuentes.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iris sublimados</title>
+    <meta name="keywords" content="sublimado, remeras, tazas, tutu, llaveros, ropa interior, redes, envios, Argentina, interior, toallas, stickers">
+    <meta name="description" content="Esta pagina es un empredimiento de sublimado">
+    <title>Iris sublimados/preguntas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
     <link rel="stylesheet" href="../css/main.css">
@@ -42,7 +44,7 @@
                       <a class="nav-link" href="../index.html">Inicio</a>
                       <a class="nav-link" href="../paginas/diseñaturemera.html">Diseña tu remera</a>
                       <a class="nav-link" href="../paginas/nuestrasredes.html">Nuestras redes</a>
-                      <a class="nav-link" href="#">Preguntas frecuentes</a>
+                      <a class="nav-link" href="#">Lista de precios</a>
                       <a class="nav-link" href="../paginas/productos.html">Productos</a>
                       <a class="nav-link" href="../paginas/quienesomos.html">Quienes somos</a>
                   </div>
