--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
                       <img img src="./assets/logo.jpg" width="160px" alt="Logo" style="border-radius: 70%;">
                       <a class="nav-link" href="#">Inicio</a>
                       <a class="nav-link" href="./paginas/diseñaturemera.html"  >Diseña tu remera</a>
-                      <a class="nav-link" href="./paginas/nuestrasredes.html">Nuestras redes</a>
-                      <a class="nav-link" href="./paginas/preguntasfrecuentes.html">Lista de precios</a>
-                      <a class="nav-link" href="./paginas/productos.html">Productos</a>
+                      <a class="nav-link" href="./paginas/Listadeprecios.html">Lista de precios</a>
                       <a class="nav-link" href="./paginas/quienesomos.html">Quienes somos</a>
+                      <a class="nav-link" href="./paginas/Preguntasfrecuentes.html">Preguntas frecuentes</a>
                   </div>
               
                 </div>
